--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,38 +3,38 @@ project(SearchEngine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(JSONCPP jsoncpp)
-
-set(CMAKE_THREAD_PREFER_PTHREAD TRUE) # these are to use the prefered -pthread flag
-set(THREADS_PREFER_PTHREAD_FLAG TRUE) # over the -lpthread option
-find_package(Threads REQUIRED)
-
 set(MY_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 set(MY_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
 
+#message(WARNING "MY_INCLUDE_DIR = " ${MY_INCLUDE_DIR})
+#message(WARNING "MY_SRC_DIR = " ${MY_SRC_DIR})
+
 include(FetchContent)
 
-FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
-FetchContent_MakeAvailable(json)
+FetchContent_Declare(
+        json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz
+)
 
 FetchContent_Declare(
         googletest
         GIT_REPOSITORY https://github.com/google/googletest.git
         GIT_TAG release-1.12.1
 )
-FetchContent_MakeAvailable(googletest)
-
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
-add_executable(SearchEngine main.cpp src/ConverterJSON.cpp include/ConverterJSON.h src/InvertedIndex.cpp include/InvertedIndex.h src/SearchServer.cpp include/SearchServer.h)
+add_executable(SearchEngine
+        main.cpp
+        src/ConverterJSON.cpp
+        include/ConverterJSON.h
+        src/InvertedIndex.cpp
+        include/InvertedIndex.h
+        src/SearchServer.cpp
+        include/SearchServer.h)
+
 enable_testing()
 add_subdirectory(tests)
-#add_subdirectory(src)
 
-target_link_libraries(SearchEngine
-        PRIVATE nlohmann_json::nlohmann_json
-        PRIVATE Threads::Threads ${JSONCPP_LIBRARIES})
+target_link_libraries(SearchEngine nlohmann_json::nlohmann_json)
 
-FetchContent_MakeAvailable(json)
+FetchContent_MakeAvailable(json googletest)
