--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(MY_INCLUDE_DIR                  ${CMAKE_SOURCE_DIR}/include)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR})
 
 
+
 #message(WARNING "CMAKE_SOURCE_DIR   = " ${CMAKE_SOURCE_DIR})
 #message(WARNING "MY_SRC_DIR         = " ${MY_SRC_DIR})
 #message(WARNING "MY_INCLUDE_DIR     = " ${MY_INCLUDE_DIR})
@@ -25,6 +26,8 @@ FetchContent_Declare(
         GIT_REPOSITORY https://github.com/google/googletest.git
         GIT_TAG release-1.12.1
 )
+
+include_directories(SearchEngine ${MY_INCLUDE_DIR})
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
